--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 benchmarks/Manifest.toml
 docs/Manifest.toml
 docs/build
-misc/
+misc
 examples/Manifest.toml
 examples/quantum_dot/configs
 examples/quantum_dot/data
